Splash , Intro , FontChanger

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,63 +9,54 @@
         android:id="@+id/document"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="38dp" />
+        android:text="Button" />
 
     <Button
         android:id="@+id/spplan"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
         android:text="Button1"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="109dp" />
+        android:layout_below="@+id/document" />
 
     <Button
         android:id="@+id/fdplan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="164dp" />
+        android:layout_below="@+id/spplan" />
 
     <Button
         android:id="@+id/ability"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="221dp" />
+        android:layout_below="@+id/fdplan"/>
 
     <Button
         android:id="@+id/sptest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="278dp" />
+        android:layout_below="@+id/ability" />
 
     <Button
         android:id="@+id/terminology"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="339dp" />
+        android:layout_below="@+id/sptest" />
 
     <Button
         android:id="@+id/massage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="398dp" />
+        android:layout_below="@+id/terminology" />
 
     <Button
         android:id="@+id/bodybld"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="447dp" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_below="@+id/massage" />
+</RelativeLayout>
