--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ir.geek.parvaneh.MenuActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="ir.geek.parvaneh.MenuActivity"
+    android:id="@+id/rl">
 
+    <android.support.design.widget.NavigationView
+        app:headerLayout="@layout/header"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        app:itemTextColor="@color/darkgray"
+        app:itemIconTint="@color/darkgray"
+        android:background="#e0e0e0"
+        app:menu="@menu/drawermenu"
+
+        ></android.support.design.widget.NavigationView>
     <Button
         android:id="@+id/document"
         android:layout_width="wrap_content"
@@ -23,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
+
         android:layout_below="@+id/spplan" />
 
     <Button
@@ -58,5 +72,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        android:layout_below="@+id/massage" />
-</RelativeLayout>
+/>
+</android.support.v4.widget.DrawerLayout>
