--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="primary">#795548</color>
+    <color name="primarydark">#5D4037</color>
+    <color name="white">#ffffff</color>
+    <color name="darkgray">#6c6c6c</color>
 </resources>
