--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -3,14 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="ir.geek.parvaneh.MenuActivity">
-
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:headerLayout="@layout/header"
+        android:background="#f0f0f0"
+        app:itemTextColor="@color/darkgray"
+        app:menu="@menu/drawermenu"
+        app:itemIconTint="@color/darkgray"
+        android:layout_gravity="end"
+        ></android.support.design.widget.NavigationView>
     <Button
         android:id="@+id/document"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button" />
-
     <Button
         android:id="@+id/spplan"
         android:layout_width="wrap_content"
