--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ir.geek.parvaneh.Intro"
+    tools:context="ir.geek.parvaneh.IntroActivity"
     android:id="@+id/activity_intro">
 
     <android.support.v4.view.ViewPager
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/nextBtn"
             android:text="بعدی"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:textColor="@android:color/white"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/skipBtn"
             android:text="رد شو"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:textColor="@android:color/white"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
