--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#ffffff</color>
+    <color name="colorAccent">#7c4dff</color>
     <color name="primary">#795548</color>
     <color name="primarydark">#5D4037</color>
     <color name="white">#ffffff</color>
     <color name="darkgray">#6c6c6c</color>
+    <color name="link">#FFF20095</color>
 </resources>
