--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -41,8 +41,8 @@
 
             <Button
                 android:id="@+id/massage"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_width="110dp"
+                android:layout_height="130dp"
                 android:layout_alignLeft="@+id/terminology"
                 android:layout_alignStart="@+id/terminology"
                 android:layout_below="@+id/terminology"
@@ -51,8 +51,8 @@
 
             <Button
                 android:id="@+id/ability"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_width="110dp"
+                android:layout_height="130dp"
                 android:layout_alignLeft="@+id/fdplan"
                 android:layout_alignStart="@+id/fdplan"
                 android:layout_below="@+id/fdplan"
@@ -61,8 +61,8 @@
 
             <Button
                 android:id="@+id/sptest"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_width="110dp"
+                android:layout_height="130dp"
                 android:layout_alignLeft="@+id/spplan"
                 android:layout_alignStart="@+id/spplan"
                 android:layout_below="@+id/spplan"
@@ -71,8 +71,8 @@
 
             <Button
                 android:id="@+id/spplan"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_width="110dp"
+                android:layout_height="130dp"
                 android:layout_alignLeft="@+id/document"
                 android:layout_alignStart="@+id/document"
                 android:layout_below="@+id/document"
@@ -81,8 +81,8 @@
 
             <Button
                 android:id="@+id/terminology"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_width="110dp"
+                android:layout_height="130dp"
                 android:layout_alignLeft="@+id/ability"
                 android:layout_alignStart="@+id/ability"
                 android:layout_below="@+id/ability"
@@ -91,8 +91,8 @@
 
             <Button
                 android:id="@+id/fdplan"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_width="110dp"
+                android:layout_height="130dp"
                 android:layout_alignTop="@+id/document"
                 android:layout_marginLeft="25dp"
                 android:layout_marginStart="25dp"
@@ -103,8 +103,8 @@
 
             <Button
                 android:id="@+id/document"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_width="110dp"
+                android:layout_height="130dp"
                 android:layout_alignLeft="@+id/bodybld"
                 android:layout_alignParentTop="true"
                 android:layout_alignStart="@+id/bodybld"
@@ -114,8 +114,8 @@
 
             <Button
                 android:id="@+id/bodybld"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_width="110dp"
+                android:layout_height="130dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/sptest"
