--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -5,6 +5,7 @@
     <include layout="@layout/toolbar"
         android:id="@+id/my_toolbar"/>
     <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer"
         android:layout_below="@id/my_toolbar"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
