--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -58,59 +58,68 @@
 
                     <Button
                         android:id="@+id/massage"
-                        android:layout_width="110dp"
-                        android:layout_height="130dp"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
                         android:drawableTop="@mipmap/waist"
-                        android:text="آموزش ماساژ" />
+                        android:text="آموزش ماساژ"
+                        android:layout_gravity="top"
+                         />
 
                     <Button
                         android:id="@+id/sptest"
-                        android:layout_width="110dp"
-                        android:layout_height="130dp"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
                         android:drawableTop="@mipmap/clipboard"
-                        android:text="آزمون های ورزشی" />
+                        android:text="آزمون های ورزشی"
+                        android:layout_gravity="top"/>
 
                     <Button
                         android:id="@+id/spplan"
-                        android:layout_width="110dp"
-                        android:layout_height="130dp"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
                         android:drawableTop="@mipmap/exercisecycle"
-                        android:text="برنامه ورزشی" />
+                        android:text="برنامه ورزشی"
+                        android:layout_gravity="top"/>
 
                     <Button
                         android:id="@+id/terminology"
-                        android:layout_width="110dp"
-                        android:layout_height="130dp"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
                         android:drawableTop="@mipmap/weigher"
-                        android:text="اصطلاحات علمی در علوم ورزشی" />
+                        android:text="اصطلاحات علمی در علوم ورزشی"
+                        android:layout_gravity="top"/>
 
                     <Button
                         android:id="@+id/fdplan"
-                        android:layout_width="110dp"
-                        android:layout_height="130dp"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
                         android:drawableTop="@mipmap/fish"
-                        android:text="برنامه تغذیه" />
+                        android:text="برنامه تغذیه"
+                        android:layout_gravity="top"/>
 
                     <Button
                         android:id="@+id/document"
-                        android:layout_width="110dp"
-                        android:layout_height="130dp"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
                         android:drawableTop="@mipmap/apple"
-                        android:text="پرونده تخصصی تغذیه و فعالیت بدنی" />
+                        android:text="پرونده تخصصی تغذیه و فعالیت بدنی"
+                        android:layout_gravity="top"/>
 
                     <Button
                         android:id="@+id/bodybld"
-                        android:layout_width="110dp"
-                        android:layout_height="130dp"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
                         android:drawableTop="@mipmap/handmuscle"
-                        android:text="آموزش حرکات بدن سازی" />
+                        android:text="آموزش حرکات بدن سازی"
+                        android:layout_gravity="top"/>
 
                     <Button
                         android:id="@+id/ability"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
                         android:drawableTop="@mipmap/medalion"
-                        android:text="استعدادیابی" />
+                        android:text="استعدادیابی"
+                        android:layout_gravity="top"/>
                 </GridLayout>
             </RelativeLayout>
 
