--- a/app/src/main/res/layout/activity_forget.xml
+++ b/app/src/main/res/layout/activity_forget.xml
@@ -27,7 +27,7 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/logo" />
 
-    <ScrollView
+    <RelativeLayout
         android:id="@+id/forget_form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -74,7 +74,7 @@
         </LinearLayout>
 
 
-    </ScrollView>
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
