--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/nextBtn"
-            android:text="بعدی"
+            android:text="@string/next"
             android:textSize="15dp"
             android:textColor="@android:color/white"
             android:layout_alignParentLeft="true"
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/skipBtn"
-            android:text="رد شو"
+            android:text="@string/skip"
             android:textSize="15dp"
             android:textColor="@android:color/white"
             android:layout_alignParentRight="true"
