--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/logo" />
 
-    <ScrollView
+    <RelativeLayout
         android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -104,12 +104,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="@string/action_sign_in"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:elevation="4dp"/>
 
         </LinearLayout>
 
 
-    </ScrollView>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
