--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <include layout="@layout/toolbar"
-        android:id="@+id/my_toolbar"/>
     <android.support.v4.widget.DrawerLayout
-
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/drawer"
-        android:layout_below="@id/my_toolbar"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context="ir.geek.parvaneh.MenuActivity">
         <android.support.design.widget.NavigationView
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="match_parent"
             android:layout_gravity="end"
             android:background="#f0f0f0"
             app:headerLayout="@layout/header"
             app:itemIconTint="@color/darkgray"
             app:itemTextColor="@color/darkgray"
-            app:menu="@menu/drawermenu" >
+            app:menu="@menu/drawermenu"
+            android:layoutDirection="rtl">
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -35,95 +30,233 @@
                 </RelativeLayout>
             </ScrollView>
         </android.support.design.widget.NavigationView>
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <include layout="@layout/toolbar"
+            android:id="@+id/my_toolbar"/>
         <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/my_toolbar">
 
+            <GridLayout
+                android:id="@+id/menuGrid"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:columnCount="2">
 
-            <RelativeLayout
+                <RelativeLayout
+                    android:id="@+id/massage"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="5dp"
+                    android:background="@color/colorPrimary"
+                    android:elevation="1dp"
+                    android:padding="10dp">
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:orientation="vertical">
+                    <ImageView
+                        android:id="@+id/massageicon"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_centerInParent="true"
+                        android:src="@mipmap/waist" />
 
-                <GridLayout
-                    android:id="@+id/menuGrid"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:columnCount="2">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/massageicon"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/massage_learning" />
+                </RelativeLayout>
 
-                    <Button
-                        android:id="@+id/massage"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:drawableTop="@mipmap/waist"
-                        android:text="آموزش ماساژ"
-                        android:layout_gravity="top"
-                         />
+                <RelativeLayout
+                    android:id="@+id/sptest"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="5dp"
+                    android:background="@color/colorPrimary"
+                    android:elevation="1dp"
+                    android:padding="10dp">
 
-                    <Button
-                        android:id="@+id/sptest"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:drawableTop="@mipmap/clipboard"
-                        android:text="آزمون های ورزشی"
-                        android:layout_gravity="top"/>
+                    <ImageView
+                        android:id="@+id/sptesticon"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="-20dp"
+                        android:src="@mipmap/clipboard" />
 
-                    <Button
-                        android:id="@+id/spplan"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:drawableTop="@mipmap/exercisecycle"
-                        android:text="برنامه ورزشی"
-                        android:layout_gravity="top"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/sptesticon"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/sport_tests" />
+                </RelativeLayout>
 
-                    <Button
-                        android:id="@+id/terminology"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:drawableTop="@mipmap/weigher"
-                        android:text="اصطلاحات علمی در علوم ورزشی"
-                        android:layout_gravity="top"/>
+                <RelativeLayout
+                    android:id="@+id/spplan"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="5dp"
+                    android:background="@color/colorPrimary"
+                    android:elevation="1dp"
+                    android:padding="10dp">
 
-                    <Button
-                        android:id="@+id/fdplan"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:drawableTop="@mipmap/fish"
-                        android:text="برنامه تغذیه"
-                        android:layout_gravity="top"/>
+                    <ImageView
+                        android:id="@+id/spplanicon"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="-20dp"
+                        android:src="@mipmap/exercisecycle" />
 
-                    <Button
-                        android:id="@+id/document"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:drawableTop="@mipmap/apple"
-                        android:text="پرونده تخصصی تغذیه و فعالیت بدنی"
-                        android:layout_gravity="top"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/spplanicon"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/sport_plans" />
+                </RelativeLayout>
 
-                    <Button
-                        android:id="@+id/bodybld"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:drawableTop="@mipmap/handmuscle"
-                        android:text="آموزش حرکات بدن سازی"
-                        android:layout_gravity="top"/>
+                <RelativeLayout
+                    android:id="@+id/terminology"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="5dp"
+                    android:background="@color/colorPrimary"
+                    android:elevation="1dp"
+                    android:padding="10dp">
 
-                    <Button
-                        android:id="@+id/ability"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:drawableTop="@mipmap/medalion"
-                        android:text="استعدادیابی"
-                        android:layout_gravity="top"/>
-                </GridLayout>
-            </RelativeLayout>
+                    <ImageView
+                        android:id="@+id/terminologyicon"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="-20dp"
+                        android:src="@mipmap/weigher" />
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/terminologyicon"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/terminologies"
+                        android:textAlignment="center" />
+                </RelativeLayout>
 
+                <RelativeLayout
+                    android:id="@+id/fdplan"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="5dp"
+                    android:background="@color/colorPrimary"
+                    android:elevation="1dp"
+                    android:padding="10dp">
+
+                    <ImageView
+                        android:id="@+id/fdplanicon"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="-20dp"
+                        android:src="@mipmap/weigher" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/fdplanicon"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/food_plans" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/document"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="5dp"
+                    android:background="@color/colorPrimary"
+                    android:elevation="1dp"
+                    android:padding="10dp">
+
+                    <ImageView
+                        android:id="@+id/documenticon"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="-20dp"
+                        android:src="@mipmap/apple" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/documenticon"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/profile" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/bodybld"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="5dp"
+                    android:background="@color/colorPrimary"
+                    android:elevation="1dp"
+                    android:padding="10dp">
+
+                    <ImageView
+                        android:id="@+id/bodybldicon"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="-20dp"
+                        android:src="@mipmap/handmuscle" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/bodybldicon"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/body_building_learnings" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/talent"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="5dp"
+                    android:background="@color/colorPrimary"
+                    android:elevation="1dp"
+                    android:padding="10dp">
+
+                    <ImageView
+                        android:id="@+id/talenticon"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="-20dp"
+                        android:src="@mipmap/medalion" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/talenticon"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/talent_detecting" />
+                </RelativeLayout>
+            </GridLayout>
         </ScrollView>
-    </android.support.v4.widget.DrawerLayout>
-</RelativeLayout>
+    </RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
+
