--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,25 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.Toolbar
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="@color/colorPrimary"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/toolbar"
-    android:elevation="4dp">
+    android:elevation="4dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="تست"
+        android:layout_gravity="center"
+        android:text="بخش های برنامه"
         android:textSize="25dp"
-        android:layout_marginRight="20dp"
-        android:layout_gravity="right"
         android:textStyle="bold"/>
-    <ImageView
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/ic_menu_black"
-        android:layout_marginLeft="20dp"/>
-
 
 </android.support.v7.widget.Toolbar>
