--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,9 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="@color/colorPrimary"
-    android:elevation="4dp"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp">
+    android:elevation="2dp"
+    android:layoutDirection="rtl">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,6 +14,6 @@
         android:layout_gravity="center"
         android:text="بخش های برنامه"
         android:textSize="25dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
 </android.support.v7.widget.Toolbar>
