--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,10 @@
 <resources>
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#ffffff</color>
-    <color name="colorAccent">#7c4dff</color>
+    <color name="colorAccent">#5856d6</color>
     <color name="primary">#795548</color>
     <color name="primarydark">#5D4037</color>
     <color name="white">#ffffff</color>
     <color name="darkgray">#6c6c6c</color>
-    <color name="link">#FFF20095</color>
+    <color name="link">#ff2a68</color>
 </resources>
